--- a/working/config/tasks/delete_tudelft_output.yaml
+++ b/working/config/tasks/delete_tudelft_output.yaml
@@ -1,3 +1,3 @@
 task:
   type: bash
-  command: "rm /home/airflow/sources/working/output/*"
+  command: "rm ${AIRFLOW_HOME_DIR}/working/output/*.duckdb || true"
