--- a/working/config/tasks/tudelft-zarr-rcp8p5-2085.yaml
+++ b/working/config/tasks/tudelft-zarr-rcp8p5-2085.yaml
@@ -9,6 +9,7 @@ task:
   api_version: auto
   auto_remove: true
   docker_url: unix://var/run/docker.sock
+  docker_conn_id: prx_registry
   network_mode: bridge
   command: "
   python /app/src/cli.py load \
@@ -22,6 +23,6 @@ task:
   "
 
   mounts:
-    - /home/docker/rawdata/tudelft_river/:/opt/airflow/data
-    - /home/docker/dags/working/output:/opt/airflow/geodatabases
-    - /home/docker/dags/working/task_files:/opt/airflow/task_files
+    - ${RAW_DATA_DIR}/:/opt/airflow/data
+    - ${WORKING_DIR}/output:/opt/airflow/geodatabases
+    - ${WORKING_DIR}/task_files:/opt/airflow/task_files
