--- a/working_example/config/tasks/tu_delft_River_flood_depth_1971_2000_hist_0010y-example.yaml
+++ b/working_example/config/tasks/tu_delft_River_flood_depth_1971_2000_hist_0010y-example.yaml
@@ -4,14 +4,13 @@ task:
   task_id: tu_delft_River_flood_depth_1971_2000_hist_0010y
   type: docker
 
-  image: registry.arfima.com/project-x/dockersandbox/dbroda/osc-geo-h3loader-cli
+  image: brodagroupsoftware/osc-geo-h3loader-cli
   container_name: osc-geo-h3loader-cli-tu_delft_River_flood_depth_1971_2000_hist_0010y
   api_version: auto
   auto_remove: true
-  docker_url: unix://var/run/docker.sock
-  docker_conn_id: prx_registry
+  docker_url: tcp://docker-proxy:2375
   network_mode: bridge
-  command: "python /app/src/cli/cli_load.py load-pipeline --config_path /opt/airflow/task_files/tudelft_index_conf/tu_delft_River_flood_depth_1971_2000_hist_0010y.yml"
+  command: "python /app/src/cli/cli_load.py load-pipeline --config_path /opt/airflow/task_files/tu_delft_River_flood_depth_1971_2000_hist_0010y.yml"
 
   mounts:
     - ${RAW_DATA_DIR}/:/opt/airflow/data
